--- a/css/repositorio.css
+++ b/css/repositorio.css
@@ -15,7 +15,7 @@
     --bg-color: #000000;
     --second-bg-color: #242424;
     --text-color: #ededed;
-    --main-color: #00abf0;
+    --main-color: #00e0f0;
 }
 
 html {
@@ -87,7 +87,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url(); 
+    background: url(../img/Sin\ título.png); 
     background-size: cover;
     background-position: center;
 }
